[tool.poetry]
name = "pytesting_utils"
version = "0.5.0"
description = "Utilities for the PyTesting project"
authors = ["Stephan Lukasczyk <python-test-runner@googlegroups.com>"]
license = "LGPL-3.0+"
readme = "README.md"
repository = "https://github.com/pytesting/utils"
keywords = ["test runner", "unittest", "nose", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Education :: Testing",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
virtualenv = "^16.7"

[tool.poetry.dev-dependencies]
coverage = "^5.0"
pytest = "^5.3"
pytest-cov = "^2.8"
flake8 = "^3.7"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.760"
pylint = "^2.4"
pytest-sugar = "^0.9.2"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | pynguin.egg-info
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
